--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <meta charset="utf=8">
+    <style type="text/css">
+        #background {
+            width: 100%;
+            height: 100vh;
+            margin: auto;
+            align-content: center;
+        }
+    </style>
 </head>
 
 <body>
-
+    <div id="background">
+        <button onclick="setTimeout(ran_col(), 3000);">Try it</button>
+    </div>
+    <script type="text/javascript">
+        var i = 0;
+        function change() {
+            var doc = document.getElementById("background");
+            var color = ["black", "blue", "brown", "green"];
+            doc.style.backgroundColor = color[i];
+            i = (i + 1) % color.length;
+        }
+        setInterval(change, 1000);
+    </script>
 </body>
 
 </html>
