--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         var i = 0;
         function change() {
             var doc = document.getElementById("background");
-            var color = ["black", "blue", "brown", "green"];
+            var color = ["black", "blue", "brown", "green", "peru"];
             doc.style.backgroundColor = color[i];
             i = (i + 1) % color.length;
         }
